--- a/solutions.css
+++ b/solutions.css
@@ -1,167 +1,166 @@
-.ex-1-square {
-    transition: 2s;
+/* esercizio 1 */
+.ex-1-square{
+  background: none;
+  transition: background 2s linear;
 }
 .ex-1-square:hover {
-    background: red;
+  background-color: red;
 }
-.ex-2-square {
-    transition: 2s;
+/* esercizio 1 */
+
+/* esercizio 2 */
+.ex-2-square{
+  transition: width 2s linear;
 }
-.ex-2-square:active {
-    width: 100%;
+.ex-2-square:active{
+  width: 100%;
 }
-.ex-3-square {
-    transition: 1s;
+/* esercizio 2 */
+
+/* esercizio 3 */
+.ex-3-square{
+  transition: border-radius 2s linear;
 }
 .ex-3-square:hover {
-    border-radius: 100%;
+  border-radius: 50%;
 }
-.ex-4-square {
-    transition: 1s;
+/* esercizio 3 */
+
+/* esercizio 4 */
+.ex-4-square{
+  transition: background 2s linear;
 }
 .ex-4-square:hover {
-    opacity: 0;
+  background-color: #f5f5f5;
 }
-.ex-5-square {
-    transition: 1s;
+/* esercizio 4 */
+
+/* esercizio 5 */
+.ex-5-square{
+  transition: width 2s, height 2s, margin 2s;
 }
 .ex-5-square:hover {
-    transform: scale(2);
+  height: 100px;
+  width: 100px;
+  margin: 0px;
 }
 .ex-5-square:active {
-    transform: scale(.5);
+  height: 40px;
+  width: 40px;
+  margin: 30px;
 }
+/* esercizio 5 */
+
+/* esercizio 6 */
 .ex-6-img:hover {
-    filter: grayscale(1);
+  filter: grayscale(100%)
 }
-.ex-7-img {
-    transition: 2s;
+/* esercizio 6 */
+
+/* esercizio 7 */
+.ex-7-img{
+  transition: all 2s;
 }
 .ex-7-img:hover {
-    filter: grayscale(.6) sepia(.5);
+  filter: blur(2px) grayscale(100%);
 }
-.ex-8-img {
-    transition: 2s;
+/* esercizio 7 */
+
+/* esercizio 8 */
+.ex-8-img{
+  transition: all 2s;
 }
 .ex-8-img:hover {
-    filter: grayscale(.6) sepia(.5);
-    border-radius: 20px;
+  filter: blur(2px) grayscale(100%);
+  border-radius: 10px;
 }
-.ex-9-img {
-    transition: 2s;
+/* esercizio 8 */
+
+/* esercizio 9 */
+.ex-9-img{
+  transition: all 2s;
 }
 .ex-9-img:hover {
-    filter: grayscale(.6) sepia(.5);
-    border-radius: 20px;
-    transform: scale(1.5);
+  filter: blur(2px) grayscale(100%);
+  border-radius: 10px;
+  width: 600px;
+  margin: 0;
 }
+/* esercizio 9 */
+
+/* esercizio 10 */
 .ex-10-icon {
-    animation: spin 1s linear infinite;
+  animation-name: example;
+  animation-duration: 3s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
 }
-@keyframes spin {
-    0% {
-        transform: rotate(1turn);
-    }
+@keyframes example {
+  0%   {transform: rotate(0deg);}
+  100% {transform: rotate(360deg);}
 }
+/* esercizio 10 */
 
+/* esercizio 11 */
 .ex-11-icon:hover {
-    animation: spinALittleBit 2s linear;
+  animation-name: example2;
+  animation-duration: 3s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
 }
-@keyframes spinALittleBit {
-    0% {
-        transform: rotate(0);
-    }
-    90% {
-        transform: rotate(315deg);
-    }
-    100% {
-        transform: rotate(0);
-    }
+@keyframes example2 {
+  0%   {transform: rotate(0deg);}
+  75%  {transform: rotate(270deg);}
+  100% {transform: rotate(0deg);}
 }
+/* esercizio 11 */
+
+/* esercizio 12 */
 .ex-12-button:hover .ex-12-top-white {
-    animation: moveTopWhite 2s linear;
+  animation-name: example3;
+  animation-duration: 3s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
 }
-@keyframes moveTopWhite {
-    0% {
-        left: 10%;
-    }
-    50% {
-        left: calc(100% - 60px);
-    }
-    100% {
-        left: 10%;
-    }
-}
-.ex-12-button:hover .ex-12-bottom-white {
-    animation: moveBottomWhite 2s linear;
-}
-@keyframes moveBottomWhite {
-    0% {
-        right: 20%;
-    }
-    50% {
-        right: calc(100% - 60px);
-    }
-    100% {
-        right: 20%;
-    }
+@keyframes example3 {
+  0%   {left: 10%}
+  50%  {left: 60%}
+  100% {left: 10%;}
 }
 
+.ex-12-button:hover .ex-12-bottom-white {
+  animation-name: example4;
+  animation-duration: 3s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+}
+@keyframes example4 {
+  0%   {left: 60%}
+  50%  {left: 10%}
+  100% {left: 60%;}
+}
+/* esercizio 12 */
+
+/* esercizio 13 */
 .ex-13-button:hover .ex-13-top-white {
-    animation: moveTopWhiteCompletely 2s linear;
+  animation-name: example5;
+  animation-duration: 1s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
 }
-@keyframes moveTopWhiteCompletely {
-    0% {
-        left: 10%;
-        top: -10px;
-    }
-    30% {
-        left: calc(100% - 30px);
-        top: -10px;
-    }
-    45% {
-        left: calc(100% - 30px);
-        top: 100%;
-    }
-    75% {
-        left: 0;
-        top: 100%;
-    }
-    90% {
-        left: -15px;
-        top: -10px;
-    }
-    100% {
-        left: 10%;
-        top: -10px;
-    }
+@keyframes example5 {
+  0%   {left: -10%}
+  100% {left: 80%;}
 }
+
 .ex-13-button:hover .ex-13-bottom-white {
-    animation: moveBottomWhiteCompletely 2s linear;
+  animation-name: example6;
+  animation-duration: 1s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
 }
-@keyframes moveBottomWhiteCompletely {
-    0% {
-        bottom: -10px;
-        right: 20%;
-    }
-    30% {
-        right: calc(100% - 30px);
-        bottom: -10px;
-    }
-    45% {
-        right: calc(100% - 30px);
-        bottom: 100%;
-    }
-    75% {
-        right: 0;
-        bottom: 100%;
-    }
-    90% {
-        right: -15px;
-        bottom: -10px;
-    }
-    100% {
-        bottom: -10px;
-        right: 20%;
-    }
+@keyframes example6 {
+  0%   {left: 80%}
+  100% {left: -10%;}
 }
+/* esercizio 13 */
