--- a/solutions.css
+++ b/solutions.css
@@ -149,8 +149,26 @@
   animation-iteration-count: infinite;
 }
 @keyframes example5 {
-  0%   {left: -10%}
-  100% {left: 80%;}
+  0%   {
+    left: -10%;
+    top: -10%;
+  }
+  25%  {
+    top: -10%;
+    left: 80%;
+  }
+  50%  {
+    top: 80%;
+    left: 80%;
+  }
+  75%  {
+    top: 80%;
+    left: -10%;
+  }
+  100% {
+    left: -10%;
+    top: -10%;
+  }
 }
 
 .ex-13-button:hover .ex-13-bottom-white {
@@ -160,7 +178,25 @@
   animation-iteration-count: infinite;
 }
 @keyframes example6 {
-  0%   {left: 80%}
-  100% {left: -10%;}
+  0%   {
+    top: 80%;
+    left: 80%;
+  }
+  25%  {
+    top: 80%;
+    left: -10%;
+  }
+  50%  {
+    left: -10%;
+    top: -10%;
+  }
+  75%  {
+    top: -10%;
+    left: 80%;
+  }
+  100% {
+    top: 80%;
+    left: 80%;
+  }
 }
 /* esercizio 13 */
